--- a/.htaccess
+++ b/.htaccess
@@ -42,7 +42,7 @@ Redirect 301 /dzemperiai.html http://www.juozukas.lt/index/php
 
 Redirect 301 /marsk_regent.html http://www.juozukas.lt/lt/produktai/vyriski-marskineliai/?showall=1
 Redirect 301 /marsk_mrg_be.html http://www.juozukas.lt/lt/produktai/moteriski-marskineliai/?showall=1
-
+Redirect 301 /blog http://www.juozukas.lt/index.php
 Redirect 301 /marsk_mrg_gili.html http://www.juozukas.lt/lt/produktai/moteriski-marskineliai/marskineliai-gilia-iskirpte/
 Redirect 301 /marsk_vk.html http://www.juozukas.lt/lt/produktai/vyriski-marskineliai/klasikiniai-marskineliai/?showall=1
 Redirect 301 /vaikinams.html http://www.juozukas.lt/lt/produktai/vyriski-marskineliai/klasikiniai-marskineliai/?showall=1
