--- a/.htaccess
+++ b/.htaccess
@@ -33,7 +33,8 @@ Redirect 301 /namams.html http://www.juozukas.lt/index.php
 Redirect 301 /patarimai.html http://www.juozukas.lt/index.php
 Redirect 301 /paslaugos.html http://www.juozukas.lt/index.php
 Redirect 301 /dzemperiai.html http://www.juozukas.lt/index/php
-
+Redirect 301 /kur.html http://www.juozukas.lt/lt/kontaktai/
+Redirect 301 /kontaktai.html http://www.juozukas.lt/lt/kontaktai/
 
 #Redirect 301 /lt/naujienos http://www.juozukas.lt/lt/naujienos/
 #Redirect 301 /lt/uzsakymas http://www.juozukas.lt/index.php
@@ -56,26 +57,63 @@ Redirect 301 /marsk_coconut.html http://juozukas.lt/lt/produktai/moteriski-marsk
 Redirect 301 /marsk_miss.html http://juozukas.lt/lt/produktai/moteriski-marskineliai/?showall=1
 
 #strange stuff
+Redirect 301 /11.php http://www.juozukas.lt/index.php
+Redirect 301 /adodb.class.php http://www.juozukas.lt/index.php
 Redirect 301 /admin.php http://www.juozukas.lt/index.php
 Redirect 301 /admin-ajax.php http://www.juozukas.lt/index.php
 Redirect 301 /administrator/ http://www.juozukas.lt/index.php
+Redirect 301 /cache.php http://www.juozukas.lt/index.php
+Redirect 301 /cfiles.php http://www.juozukas.lt/index.php
+Redirect 301 /CHANGELOG.php http://www.juozukas.lt/index.php
 Redirect 301 /conns.php http://www.juozukas.lt/index.php
 Redirect 301 /configuration.php http://www.juozukas.lt/index.php
+Redirect 301 /configurationbak.php http://www.juozukas.lt/index.php
 Redirect 301 /configbak.php http://www.juozukas.lt/index.php
-Redirect 301 //plugins/likebox.php http://www.juozukas.lt/index.php
-Redirect 301 /xmlrpc.php http://www.juozukas.lt/index.php
-Redirect 301 /readme.html http://www.juozukas.lt/index.php
-Redirect 301 /kur.html http://www.juozukas.lt/lt/kontaktai/
-Redirect 301 /kontaktai.html http://www.juozukas.lt/lt/kontaktai/
+Redirect 301 /.cpanel_config.php http://www.juozukas.lt/index.php
+Redirect 301 /database.php http://www.juozukas.lt/index.php
+Redirect 301 /error-log.php http://www.juozukas.lt/index.php
+Redirect 301 /filess.php http://www.juozukas.lt/index.php
+Redirect 301 /get.php http://www.juozukas.lt/index.php
+Redirect 301 /gemb.php http://www.juozukas.lt/index.php
+Redirect 301 /general.php http://www.juozukas.lt/index.php
+Redirect 301 /home.bak.php http://www.juozukas.lt/index.php
+Redirect 301 /index.phprobots.txt http://www.juozukas.lt/index.php
 Redirect 301 /Licence.txt http://www.juozukas.lt/index.php
 Redirect 301 /licence.txt http://www.juozukas.lt/index.php
+Redirect 301 /licence.php http://www.juozukas.lt/index.php
 Redirect 301 /libraries/lol.php http://www.juozukas.lt/index.php
 Redirect 301 /libraries/joomla/css.php http://www.juozukas.lt/index.php
 Redirect 301 /moadmin.php http://www.juozukas.lt/index.php
-Redirect 301 /wp-login.php http://www.juozukas.lt/index.php
-Redirect 301 /wp-checking.php http://www.juozukas.lt/index.php
-Redirect 301 /wp-trackback.php http://www.juozukas.lt/index.php
+Redirect 301 /modx.php http://www.juozukas.lt/index.php
+Redirect 301 /mide.php http://www.juozukas.lt/index.php
+Redirect 301 /news_parser.class.php http://www.juozukas.lt/index.php
+Redirect 301 /news.php http://www.juozukas.lt/index.php
+Redirect 301 /ooimg.php http://www.juozukas.lt/index.php
+Redirect 301 /readme.html http://www.juozukas.lt/index.php
+Redirect 301 /resd.php http://www.juozukas.lt/index.php
+Redirect 301 /popup-pomo.php http://www.juozukas.lt/index.php
+Redirect 301 //plugins/likebox.php http://www.juozukas.lt/index.php
+Redirect 301 /start.php http://www.juozukas.lt/index.php
 Redirect 301 /stats.php http://www.juozukas.lt/index.php
+Redirect 301 /shell.php http://www.juozukas.lt/index.php
+Redirect 301 /tempfs.php http://www.juozukas.lt/index.php
+Redirect 301 /tmp.php http://www.juozukas.lt/index.php
+Redirect 301 /upgrade.php http://www.juozukas.lt/index.php
+Redirect 301 /uu.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-activate.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-admin/admin-ajax.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-login.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-blog-header.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-installation.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-object-cache.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-check.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-includes/js/tw-sack.js http://www.juozukas.lt/index.php
+Redirect 301 /wp-checking.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-content/plugins/resd.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-content/plugins/Login-wall-etgFB/login_wall.php http://www.juozukas.lt/index.php
+Redirect 301 /wp-trackback.php http://www.juozukas.lt/index.php
+Redirect 301 /xmlrppc.php http://www.juozukas.lt/index.php
+Redirect 301 /xmlrpc.php http://www.juozukas.lt/index.php
 
 #images and other documents
 Redirect 301 /image/175x175/MC114.gif http://juozukas.lt/media/dynamic/img/607/570_regular_2_mw194.png
