--- a/.htaccess
+++ b/.htaccess
@@ -55,11 +55,14 @@ Redirect 301 /marsk_mrg.html http://juozukas.lt/lt/produktai/moteriski-marskinel
 Redirect 301 /marsk_vk_ilg.html http://juozukas.lt/lt/produktai/vyriski-marskineliai/?showall=1
 Redirect 301 /marsk_coconut.html http://juozukas.lt/lt/produktai/moteriski-marskineliai/?showall=1
 Redirect 301 /marsk_miss.html http://juozukas.lt/lt/produktai/moteriski-marskineliai/?showall=1
+Redirect 301 /lt/produktai/vyriski-marskineliai http://www.juozukas.lt/lt/produktai/vyriski-marskineliai/
+Redirect 301 /lt/produktai/moteriski-marskineliai http://www.juozukas.lt/lt/produktai/moteriski-marskineliai/
 
 #strange stuff
 Redirect 301 /11.php http://www.juozukas.lt/index.php
 Redirect 301 /adodb.class.php http://www.juozukas.lt/index.php
 Redirect 301 /admin.php http://www.juozukas.lt/index.php
+Redirect 301 /admin/index.php http://www.juozukas.lt/index.php
 Redirect 301 /admin-ajax.php http://www.juozukas.lt/index.php
 Redirect 301 /administrator/ http://www.juozukas.lt/index.php
 Redirect 301 /cache.php http://www.juozukas.lt/index.php
@@ -78,6 +81,8 @@ Redirect 301 /gemb.php http://www.juozukas.lt/index.php
 Redirect 301 /general.php http://www.juozukas.lt/index.php
 Redirect 301 /home.bak.php http://www.juozukas.lt/index.php
 Redirect 301 /index.phprobots.txt http://www.juozukas.lt/index.php
+Redirect 301 /index.phpadministrator.php http://www.juozukas.lt/index.php
+Redirect 301 /index.phpindex.php http://www.juozukas.lt/index.php
 Redirect 301 /Licence.txt http://www.juozukas.lt/index.php
 Redirect 301 /licence.txt http://www.juozukas.lt/index.php
 Redirect 301 /licence.php http://www.juozukas.lt/index.php
