--- a/.htaccess
+++ b/.htaccess
@@ -25,16 +25,16 @@ RewriteRule ^([a-z]{0,2})/([a-z0-9\/\_\-]+)/$ /index.php?action=cmsContent&url=/
 RewriteRule ^([a-z]{0,2})/([a-z0-9\/\_\-]+)\.html$ /index.php?action=cmsContent&url=/$1/$2.html&%{QUERY_STRING} [NC]
 
 #redirect pages
-Redirect 301 /nauji.xml http://www.juozukas.lt/index.php
-Redirect 301 /view.php http://www.juozukas.lt/index.php
-Redirect 301 /auto.html http://www.juozukas.lt/index.php
-Redirect 301 /index.html http://www.juozukas.lt/index.php
-Redirect 301 /namams.html http://www.juozukas.lt/index.php
-Redirect 301 /patarimai.html http://www.juozukas.lt/index.php
-Redirect 301 /paslaugos.html http://www.juozukas.lt/index.php
-Redirect 301 /dzemperiai.html http://www.juozukas.lt/index/php
-Redirect 301 /kur.html http://www.juozukas.lt/lt/kontaktai/
-Redirect 301 /kontaktai.html http://www.juozukas.lt/lt/kontaktai/
+#Redirect 301 /nauji.xml http://www.juozukas.lt/index.php
+#Redirect 301 /view.php http://www.juozukas.lt/index.php
+#Redirect 301 /auto.html http://www.juozukas.lt/index.php
+#Redirect 301 /index.html http://www.juozukas.lt/index.php
+#Redirect 301 /namams.html http://www.juozukas.lt/index.php
+#Redirect 301 /patarimai.html http://www.juozukas.lt/index.php
+#Redirect 301 /paslaugos.html http://www.juozukas.lt/index.php
+#Redirect 301 /dzemperiai.html http://www.juozukas.lt/index/php
+#Redirect 301 /kur.html http://www.juozukas.lt/lt/kontaktai/
+#Redirect 301 /kontaktai.html http://www.juozukas.lt/lt/kontaktai/
 
 #Redirect 301 /lt/naujienos http://www.juozukas.lt/lt/naujienos/
 #Redirect 301 /lt/uzsakymas http://www.juozukas.lt/index.php
